--- a/index.html
+++ b/index.html
@@ -429,8 +429,8 @@
         <div class="modal-sheet" id="add-sheet-content" onclick="event.stopPropagation()">
             
             <div class="toggle-container" id="mode-toggle">
-                <div id="tab-burn" class="toggle-btn active burn" onclick="setMode('burn')">Expense (Burn)</div>
-                <div id="tab-fuel" class="toggle-btn" onclick="setMode('fuel')">Contribution (Fuel)</div>
+                <div id="tab-burn" class="toggle-btn active burn" onclick="setMode('burn')">Expense</div>
+                <div id="tab-fuel" class="toggle-btn" onclick="setMode('fuel')">Contribution</div>
             </div>
 
             <!-- Date Field (Shared) -->
